force-app/main/default/objects/CallRoutingProductSetting__mdt/CallRoutingProductSetting__mdt.object-meta.xml
<CustomObject>
    <description>metadata type to administrate specific product settings. Initially it contains the prefixes and subfixes that may be used by customers in the Telephony IVR when entering policy numbers for certain VTA products.</description>
    <label>CallRoutingProductSetting</label>
    <pluralLabel>CallRoutingProductSettings</pluralLabel>
</CustomObject>