force-app/main/default/objects/CallRoutingProductSetting__mdt/fields/AdministratieveProductnaam__c.field-meta.xml
<CustomField>
    <fullName>AdministratieveProductnaam__c</fullName>
    <label>Administratieve Productnaam</label>
    <length>124</length>
    <type>Text</type>
</CustomField>