force-app/main/default/objects/CallRoutingProductSetting__mdt/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <label>Context</label>
    <length>48</length>
    <type>Text</type>
</CustomField>