force-app/main/default/objects/CallRoutingProductSetting__mdt/fields/PrefixPattern__c.field-meta.xml
<CustomField>
    <fullName>PrefixPattern__c</fullName>
    <description>This lookup points to a prefix matcher pattern for recognition of valid prefixes.</description>
    <inlineHelpText>This lookup points to a prefix matcher pattern for recognition of valid prefixes.</inlineHelpText>
    <label>Prefix Pattern</label>
    <referenceTo>MatcherPattern__mdt</referenceTo>
    <relationshipLabel>CallRoutingProductSettings</relationshipLabel>
    <relationshipName>CallRoutingProductSettings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>