force-app/main/default/objects/CallRoutingProductSetting__mdt/fields/PreOrSubfixEnabled__c.field-meta.xml
<CustomField>
    <fullName>PreOrSubfixEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indication whether or not the product record is related to a prefix or subfix regex MatcherPattern.</description>
    <inlineHelpText>Set to true if the product record is related to a prefix or subfix regex MatcherPattern.</inlineHelpText>
    <label>Pre- or Subfix Enabled</label>
    <type>Checkbox</type>
</CustomField>