force-app/main/default/objects/CallRoutingProductSetting__mdt/fields/Productcode__c.field-meta.xml
<CustomField>
    <fullName>Productcode__c</fullName>
    <label>Productcode</label>
    <length>8</length>
    <type>Text</type>
</CustomField>