force-app/main/default/objects/CallRoutingProductSetting__mdt/fields/Productgroepcode__c.field-meta.xml
<CustomField>
    <fullName>Productgroepcode__c</fullName>
    <label>Productgroepcode</label>
    <length>6</length>
    <type>Text</type>
</CustomField>