force-app/main/default/objects/CallRoutingProductSetting__mdt/fields/SubfixPattern__c.field-meta.xml
<CustomField>
    <fullName>SubfixPattern__c</fullName>
    <description>This lookup points to a subfix matcher pattern for recognition of valid subfixes.</description>
    <inlineHelpText>This lookup points to a subfix matcher pattern for recognition of valid subfixes.</inlineHelpText>
    <label>Subfix Pattern</label>
    <referenceTo>MatcherPattern__mdt</referenceTo>
    <relationshipLabel>CallRoutingProductSettings (Subfix Pattern)</relationshipLabel>
    <relationshipName>CallRoutingProductSettings1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>