force-app/main/default/objects/CallRoutingProductSetting__mdt/fields/VAnummer__c.field-meta.xml
<CustomField>
    <fullName>VAnummer__c</fullName>
    <label>VA nummer</label>
    <length>8</length>
    <type>Text</type>
</CustomField>