force-app/main/default/objects/CallRoutingProductSetting__mdt/fields/VTAcode__c.field-meta.xml
<CustomField>
    <fullName>VTAcode__c</fullName>
    <label>VTAcode</label>
    <length>8</length>
    <type>Text</type>
</CustomField>