force-app/main/default/objects/CallRoutingProductSetting__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Productgroepcode__c</columns>
    <columns>Productcode__c</columns>
    <columns>VAnummer__c</columns>
    <columns>VTAcode__c</columns>
    <columns>AdministratieveProductnaam__c</columns>
    <columns>PrefixPattern__c</columns>
    <columns>SubfixPattern__c</columns>
    <columns>Context__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>